Dev: Fix for HP background image on mobile

--- a/src/components/VideoBackground.scss
+++ b/src/components/VideoBackground.scss
@@ -21,7 +21,7 @@
   );
   max-width: 1920px;
   width: 100%;
-  height: 100%;
+  // height: 100%;
   opacity: 0.3;
   position: absolute;
   overflow: hidden;
@@ -77,25 +77,27 @@
   }
 }
 
-// @media only screen and (max-width: 900px) {
-//   .html-video-container {
-//     opacity: 0.6;
-//   }
-// }
+@media only screen and (max-width: 900px) {
+  .html-video-container {
+    opacity: 0.6;
+  }
+}
 
-// @media only screen and (min-width: 300px) and (max-width: 600px) {
-//   .html-video-container {
-//     transform: scale(1.28);
-//     video {
-//       transform: scale(4.5);
-//     }
-//   }
-// }
-// @media only screen and (min-width: 200px) and (max-width: 350px) {
-//   .html-video-container {
-//     transform: scale(1.5);
-//     video {
-//       transform: scale(4.5);
-//     }
-//   }
-// }
+@media only screen and (min-width: 350px) and (max-width: 600px) {
+  .html-video-container {
+    transform: scale(3.5);
+    top: 147px;
+    video {
+      transform: scale(4.5);
+    }
+  }
+}
+@media only screen and (min-width: 200px) and (max-width: 350px) {
+  .html-video-container {
+    transform: scale(3.5);
+    top: 120px;
+    video {
+      transform: scale(4.5);
+    }
+  }
+}
