--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -105,9 +105,9 @@
     // border: 1px solid #333;
     border-radius: 1000px;
     // filter: grayscale(1);
-    -webkit-box-shadow: 0 0 25px 0 rgba(0, 0, 0, 80%);
-    -moz-box-shadow: 0 0 25px 0 rgba(0, 0, 0, 80%);
-    box-shadow: 0 0 25px 0 rgba(0, 0, 0, 80%);
+    -webkit-box-shadow: 0 0 17px 0 rgba(0, 0, 0, 80%);
+    -moz-box-shadow: 0 0 17px 0 rgba(0, 0, 0, 80%);
+    box-shadow: 0 0 17px 0 rgba(0, 0, 0, 80%);
   }
 }
 
